<resources>
    <string name="app_name">Pals</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_signup">Signup</string>
    <string name="desc">Infosys is a global leader in next generation digital services and consulting. We enable clients in 45 countries to navigate their digital transformation</string>
    <string name="cgpa"><![CDATA[CGPA>7.0]]></string>
    <string name="grade"><![CDATA[XIIth Grades>7.5]]></string>
    <string name="skills">Skills Required: PHP,J2EE, HTML, JS, BOOTSTRAP</string>
    <string name="time">TIME - 2:00PM</string>
    <string name="date">DATE - 20/09/2019</string>
    <string name="venue">VENUE - Room no.001, New Building</string>
    <string name="descOYO">OYO ,is India\'s largest hospitality company,consisting mainly of budget hotels.</string>
    <string name="descEbay">eBay is an online auction and shopping website in hich people and businesses buy and sell a wide variety of goods and services worldwide</string>


</resources>
